# grpc-service

./: Cargo.toml
examples/: install_service.rs  uninstall_service.rs
src/: channel.rs  main.rs  server.rs  service.rs
