[package]
name = "grpc-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
prost = "0.12.3"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["sync", "rt", "rt-multi-thread"] }
tokio-util = "0.7"
tonic = "0.11.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
windows-service = "0.6.0"

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
windows-sys = "0.52.0"
